syntax = "proto3";

package pb;
option go_package = "./pb";

// 定义消息类型
message CreateReq {
  int64 Uid = 1;
  string Title = 2;
  string Content = 3;
  int32 Status = 4;
}

message CreateResp{
  int32 Status = 1;
  string Data = 2;
  string Message = 3;
  string Error = 4;
}

message Task{
  int64 Id = 1;
  string Title = 2;
  string Content = 3;
  int64 View = 4;
  int32 Status = 5;
  int64 CreateAt = 6;
  int64 StartTime = 7;
  int64 EndTime = 8;
}

message Data{
  repeated Task Task = 1;
  int64 Total = 2;
}

message ListReq{
  int64 Uid = 1;
  int64 Limit = 2;
  int64 start = 3;
}

message ListResp{
  int32 Status = 1;
  Data Data = 2;
  string Message = 3;
  string Error = 4;
}

message ShowReq{
  int64 Id = 1;
  int64  Uid = 2;
}

message ShowResp{
  int32 status = 1;
  Task Task = 2;
  string Message = 3;
  string Error = 4;
}

message UpdateReq{
  string Id = 1;
  int64 Uid = 2;
  string Title = 3;
  string Content = 4;
  int32 Status = 5;
}

message UpdateResp{
  int32 Status = 1;
  string Data = 2;
  string Message = 3;
  string Error = 4;
}

message SearchReq{
  int64 Uid = 1;
  string Info = 2;
}

message SearchResp{
  int32 Status = 1;
  Data Data = 2;
  string Message = 3;
  string Error = 4;
}

message DeleteReq{
  int64 Uid = 1;
  string Id = 2;
}

message DeleteResp{
  int32 Status = 1;
  string Data = 2;
  string Message = 3;
  string Error = 4;
}

// 定义服务
service taskrpc {
  rpc CreateTask(CreateReq) returns(CreateResp);
  rpc ListTask(ListReq) returns (ListResp);
  rpc ShowTask(ShowReq) returns (ShowResp);
  rpc UpdateTask(UpdateReq) returns (UpdateResp);
  rpc SearchTask(SearchReq) returns (SearchResp);
  rpc DeleteTask(DeleteReq) returns (DeleteResp);
}
